# bespokefit-smee-benchmarking

./: .gitignore  Makefile  README.md  pyproject.toml
devtools/envs/: base.yaml
find_parameter_scales/: find_parameter_scales.ipynb
workflow/: README.md  Snakefile  utils.py
workflow/configs/: ABC_map_msm.yaml  ABC_msm.yaml  ABC_no_map.yaml  ABC_no_map_msm_no_reg.yaml  ABC_no_map_msm_stronger_reg.yaml  aimnet2.yaml  aimnet2_metad.yaml  aimnet2_metad_gentle.yaml  default.yaml  egret1_metad.yaml  egret1_opt_reg.yaml  md_plus_tor_min_longer_dual_ens_2_it_mem_no_restr.yaml  md_plus_tor_min_longer_mm_ens_all_ml_energy_no_restr.yaml  md_then_tor_min_longer_mm_ens_all_ml_energy_no_restr_energy_only_torsions_only.yaml  opt-aceff2-2it.yaml
workflow/hyperparameter_tuning/scripts/: create_configs.py  split_valid_test.py
workflow/input_forcefields/: egret1.offxml  espaloma.offxml  openff_unconstrained-2.3.0-rc2-no-h-vdw.offxml  openff_unconstrained-2.3.0-rc2-no-vdw.offxml  sage-default-bespoke.offxml
workflow/jacs_set_conformers/input/: CDK2_ligand_ids.txt  CDK2_ligands.sdf  JNK1_ligand_ids.txt  TYK2_ligand_ids.txt  get_smiles.ipynb  input_smiles.csv  p38_ligand_ids.txt  smiles.csv
workflow/jacs_set_conformers/scripts/: analyse.py  extract_smiles.py
workflow/torsionnet_500/scripts/: analyse.py  create_dataset.py  extract_smiles.py
