[project]
name = "bespokefit-smee-benchmark"
version = "0.1.0"
description = "BespokeFit SMEE benchmarking"
requires-python = ">=3.11"

[tool.pixi.project]
channels = ["conda-forge", "bioconda", "openeye"]
platforms = ["linux-64"]

[tool.pixi.system-requirements]
cuda = "12"

[tool.pixi.dependencies]
python = ">=3.11"
pyyaml = "*"
datasets = "*"
jupyter = "*"
nglview = "*"
smirnoff-plugins = ">=0.0.4"
openmm = ">=8.2"
openff-toolkit = "*"
openff-units = "*"
openff-qcsubmit = ">=0.55.0"
openff-interchange = "*"
openmm-ml = "*"
tensorboardX = "*"
tensorboard = "*"
versioneer = "*"
pytorch-gpu = "*"
pydantic = ">=2"
pydantic-settings = "*"
loguru = "*"
qcelemental = "*"
openeye-toolkits = "*"
seaborn = "*"
snakemake = "*"
pydantic-units = "*"
qcfractal = ">=0.63"
cuda-version = ">=12.0"
nnpops = "*"

[tool.pixi.pypi-dependencies]
mace-torch = "*"
smee = { git = "https://github.com/thomasjamespope/smee.git" }
descent = { git = "https://github.com/fjclark/descent.git", rev = "feature-regularization" }
bespokefit_smee = { git = "https://github.com/fjclark/bespokefit_smee.git", rev = "feature-improved-training-and-regularisation" }
yammbs = { git = "https://github.com/openforcefield/yammbs"}
deepchem = { version = ">=2.7.0", extras = ["jax"] } # Seems to interfere with pytorch if ["torch"]

[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"
